# coralReef

./: .gitignore  ABSORPTION.md  CHANGELOG.md  COMPILATION_DEBT_REPORT.md  CONTEXT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  EVOLUTION.md  LICENSE  LICENSE-ORC  README.md  START_HERE.md  STATUS.md  WHATS_NEXT.md  clippy.toml  deny.toml  deploy-dev.sh  rustfmt.toml  vis_test
crates/coral-driver/: Cargo.toml
crates/coral-driver/examples/: amd_gcn5_e2e.rs  amd_gcn5_preswap.rs  amd_nop_dispatch.rs  bench_mmu_fault_diagnostic.rs  bench_mmu_oracle.rs  bench_nouveau_oracle.rs  bench_register_probe.rs  bench_vram_probe.rs  compute_legacy_test.rs  diag_ioctl.rs  dump_shader.rs  hot_handoff_nouveau.rs  nouveau_nop_submit.c  nvidia_nop_dispatch.rs  nvidia_nouveau_e2e.rs  pmu_mailbox_trace.rs  sovereign_compute_e2e.rs  sovereign_replay.rs  warm_handoff_vfio.rs
crates/coral-driver/src/: cache.rs  drm.rs  error.rs  lib.rs  linux_paths.rs  mmio.rs  mmio_region.rs
crates/coral-driver/tests/: ember_client.rs  exp123k_k80_sovereign.rs  exp123k_k80_sovereign_devinit.rs  exp123k_k80_sovereign_gk110_boot.rs  exp123t_parasitic_probe.rs  exp129_kepler_vfio_dispatch.rs  glowplug_client.rs  hw_amd_buffers.rs  hw_amd_dispatch.rs  hw_amd_e2e.rs  hw_amd_probe.rs  hw_amd_stress.rs  hw_nv_buffers.rs  hw_nv_nouveau.rs  hw_nv_probe.rs  hw_nv_vfio.rs  hw_nv_vfio_advanced.rs  hw_nv_vfio_channel.rs  hw_nv_vfio_hbm2.rs  hw_nv_vfio_oracle.rs  linux_paths_defaults.rs  linux_paths_env_data_dir.rs  linux_paths_env_empty.rs  linux_paths_env_override.rs  linux_paths_env_overrides.rs  linux_paths_env_proc.rs  linux_paths_env_trim.rs  linux_paths_vfio_sysfs.rs  nv_probe_gpu_identity_sysfs.rs  sovereign_pipeline_test.rs
crates/coral-ember/: Cargo.toml
crates/coral-ember/src/: adaptive.rs  background.rs  btsp.rs  config.rs  drm_isolation.rs  ecosystem.rs  error.rs  guarded_open.rs  hold.rs  ipc.rs  isolation.rs  journal.rs  lib.rs  lib_tests.rs  main.rs  observation.rs  pcie_armor.rs  ring_meta.rs  runtime.rs  startup.rs  swap.rs  swap_preflight.rs  sysfs.rs  sysfs_pci_topology.rs  trace.rs  vendor_lifecycle.rs
crates/coral-ember/tests/: config_and_paths.rs  held_device_public.rs  ipc_dispatch.rs  swap_public.rs  vendor_lifecycle_public.rs
crates/coral-glowplug/: Cargo.toml  DISPATCH_BOUNDARY.md  coral-ember-standby@.service  coral-ember.service  coral-ember@.service  coral-glowplug.service  glowplug.toml
crates/coral-glowplug/src/: boot_safety.rs  capture.rs  config.rs  device.rs  ecosystem.rs  ember.rs  ember_fleet.rs  ember_lifecycle.rs  ember_test_server.rs  error.rs  fd_vault.rs  glowplug_main_linux.rs  group_unix.rs  health.rs  lib.rs  mailbox.rs  main.rs  observer.rs  pci_ids.rs  personality.rs  power_state.rs  ring.rs  sec2_bridge.rs  socket.rs  socket_tests.rs  sovereign.rs  sysfs.rs  sysfs_ops.rs
crates/coral-glowplug/tests/: config_env.rs  ember_client_ipc.rs  group_file_env.rs  health_watchdog.rs  hw_hotswap.rs
crates/coral-gpu/: Cargo.toml
crates/coral-gpu/src/: context.rs  driver.rs  error.rs  fma.rs  hash.rs  kernel.rs  lib.rs  pcie.rs  preference.rs  tests.rs
crates/coral-gpu/tests/: driver_env_defaults.rs  local_gpu_discovery.rs  parity_harness.rs
crates/coral-nak/: Cargo.toml
crates/coral-nak-bitview/: Cargo.toml
crates/coral-nak-bitview/src/: lib.rs
crates/coral-nak-isa/: Cargo.toml
crates/coral-nak-isa/src/: lib.rs  sph.rs
crates/coral-nak-stubs/: Cargo.toml
crates/coral-nak-stubs/src/: as_slice.rs  bindings.rs  bitset.rs  cfg.rs  compiler_proc.rs  dataflow.rs  lib.rs  nak_bindings.rs  nak_latencies.rs  nir.rs  nir_instr_printer.rs  nvidia_headers.rs  smallvec.rs
crates/coral-nak/src/: error.rs  gpu_arch.rs  ir.rs  lib.rs
crates/coral-nak/tests/: compiler_integration.rs
crates/coral-parse/: Cargo.toml
crates/coral-parse/src/: error.rs  frontend.rs  lib.rs
crates/coral-parse/tests/: barracuda_fixtures.rs
crates/coral-reef/: Cargo.toml
crates/coral-reef-cpu/: Cargo.toml
crates/coral-reef-cpu/src/: interpret.rs  lib.rs  types.rs  validate.rs
crates/coral-reef-cpu/tests/: debug_shared.rs
crates/coral-reef-isa/: Cargo.toml
crates/coral-reef-isa/src/: latency.rs  lib.rs  sph.rs
crates/coral-reef-jit/: Cargo.toml
crates/coral-reef-jit/src/: builtins.rs  cache.rs  cmp_codes.rs  error.rs  lib.rs  memory.rs  runtime.rs  sovereign.rs  translate.rs
crates/coral-reef-jit/tests/: jit_barracuda.rs  jit_shared_memory.rs  jit_validation.rs
crates/coral-reef-stubs/: Cargo.toml
crates/coral-reef-stubs/src/: as_slice.rs  bitset.rs  cfg.rs  dataflow.rs  fxhash.rs  lib.rs  nak_latencies.rs  nvidia_headers.rs  nvidia_headers_tests.rs  smallvec.rs
crates/coral-reef/benches/: compile_bench.rs
crates/coral-reef/src/: backend.rs  complex_f64_preamble.wgsl  df64_preamble.wgsl  error.rs  f32_transcendental_preamble.wgsl  frontend.rs  gpu_arch.rs  ir.rs  lib.rs  lib_tests.rs  prng_preamble.wgsl  su3_f64_preamble.wgsl  tol.rs  tolerances.rs
crates/coral-reef/tests/: chaos_tests.rs  codegen_coverage.rs  codegen_coverage_arch_depth.rs  codegen_coverage_deep.rs  codegen_coverage_evolution.rs  codegen_coverage_extended.rs  codegen_coverage_f64_nv_archs.rs  codegen_coverage_gaps.rs  codegen_coverage_multi_arch.rs  codegen_coverage_naga_edges.rs  codegen_coverage_sat_part01.rs  codegen_coverage_sat_part02.rs  codegen_coverage_sat_part03.rs  codegen_coverage_saturation.rs  codegen_coverage_saturation_compute.rs  codegen_coverage_targeted.rs  codegen_coverage_tex_mem_io.rs  codegen_coverage_wgsl_pipeline.rs  compiler_integration.rs  deformed_hfb_absorption.rs  fault_injection.rs  glsl_corpus.rs  nvvm_bypass.rs  nvvm_poisoning_validation.rs  parity_compilation.rs  property_tests.rs  spirv_roundtrip.rs  spring_absorption.rs  spring_absorption_wave3.rs  wgsl_corpus.rs
crates/coralnak-core/: Cargo.toml
crates/coralreef-core/: Cargo.toml
crates/nak-ir-proc/: Cargo.toml
crates/primal-rpc-client/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_jsonrpc.rs  fuzz_spirv.rs  fuzz_wgsl.rs
tools/amd-isa-gen/: Cargo.toml
(+1169 files in other folders)
