[workspace]
resolver = "2"
members = [
    "crates/coralreef-core",
    "crates/coral-reef",
    "crates/coral-reef-isa",
    "crates/coral-reef-stubs",
    "crates/coral-reef-bitview",
    "crates/nak-ir-proc",
    "crates/primal-rpc-client",
    "tools/amd-isa-gen",
    "crates/coral-driver",
    "crates/coral-gpu",
    "crates/coral-glowplug",
]
exclude = [
    "showcase",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false
repository = "https://github.com/ecoPrimals/coralReef"
authors = ["ecoPrimals Project"]
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
# EVOLUTION(pure-rust-tokio): tokio → mio → libc (epoll), socket2 → libc,
# signal-hook-registry → libc. Tracked upstream: mio#1735 (rustix migration).
# When mio switches to rustix on Linux, tokio's libc chain drops to zero.
# rustix already uses the linux_raw backend (not libc) on our targets.
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time"] }

# CLI (uniBin)
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zero-copy IPC payloads
bytes = { version = "1", features = ["serde"] }

# IPC — JSON-RPC 2.0 + tarpc
# Production: server + macros only (no TLS, no ring).
# External TLS provided by Tower Atomic (Songbird + BearDog) in deployment.
# The "client" feature (which pulls in rustls/ring) is gated behind the
# "jsonrpc-client" feature flag, enabled only for tests.
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "tcp"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compiler internals
bitview = { path = "crates/coral-reef-bitview" }
nak_ir_proc = { path = "crates/nak-ir-proc" }

# Testing
proptest = "1"

# Internal crates
coral-reef = { path = "crates/coral-reef" }
coral-reef-isa = { path = "crates/coral-reef-isa" }
coral-reef-stubs = { path = "crates/coral-reef-stubs" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
