[workspace]
resolver = "2"
members = [
    "crates/coralreef-core",
    "crates/coral-reef",
    "crates/coral-reef-isa",
    "crates/coral-reef-stubs",
    "crates/coral-reef-bitview",
    "crates/nak-ir-proc",
    "crates/primal-rpc-client",
    "tools/amd-isa-gen",
    "crates/coral-driver",
    "crates/coral-gpu",
    "crates/coral-glowplug",
    "crates/coral-ember",
    "crates/coral-reef-cpu",
    "crates/coral-reef-jit",
    "crates/coral-parse",
]
exclude = [
    "fuzz",
    "showcase",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false
repository = "https://github.com/ecoPrimals/coralReef"
authors = ["ecoPrimals Project"]
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
# EVOLUTION(pure-rust-tokio): tokio → mio → libc (epoll), socket2 → libc,
# signal-hook-registry → libc. Tracked upstream: mio#1735 (rustix migration).
# When mio switches to rustix on Linux, tokio's libc chain drops to zero.
# rustix already uses the linux_raw backend (not libc) on our targets.
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time"] }

# CLI (uniBin)
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Zero-copy IPC payloads
bytes = { version = "1", features = ["serde"] }

# IPC — JSON-RPC 2.0 + tarpc
# Production: server + macros only (no TLS, no ring).
# External TLS provided by Tower Atomic (Songbird + BearDog) in deployment.
# The "client" feature (which pulls in rustls/ring) is gated behind the
# "jsonrpc-client" feature flag, enabled only for tests.
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "tcp"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compiler internals
bitview = { path = "crates/coral-reef-bitview" }
nak_ir_proc = { path = "crates/nak-ir-proc" }

# Testing
proptest = "1"

# Sovereign syscalls (direct Linux syscalls, zero libc)
rustix = { version = "1.1", features = ["mm"] }

# Pure-Rust math (replaces libc libm for JIT transcendentals)
libm = "0.2"

# System calls (fork, waitpid) not yet covered by rustix
libc = "0.2"

# Cranelift JIT backend
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-jit = "0.130"
cranelift-native = "0.130"

# Shader frontend
naga = { version = "28", features = ["wgsl-in"] }

# GPU buffer layouts
bytemuck = { version = "1", features = ["derive"] }

# CUDA (optional, feature-gated)
cudarc = { version = "0.19", features = ["driver", "cuda-12060"] }

# NVML telemetry (replaces nvidia-smi process spawning)
nvml-wrapper = "0.10"

# Config files
toml = "0.8"

# Encoding
base64 = "0.22"

# Proc-macro tooling
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# JSON-RPC client (test-only)
jsonrpsee-http-client = { version = "0.26", default-features = false }
jsonrpsee-core = { version = "0.26", default-features = false, features = ["client", "http-helpers"] }

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1"

# Internal crates
coral-reef = { path = "crates/coral-reef" }
coral-reef-isa = { path = "crates/coral-reef-isa" }
coral-reef-stubs = { path = "crates/coral-reef-stubs" }
coral-reef-cpu = { path = "crates/coral-reef-cpu" }
coral-reef-jit = { path = "crates/coral-reef-jit" }
coral-driver = { path = "crates/coral-driver" }
coral-ember = { path = "crates/coral-ember" }
coral-parse = { path = "crates/coral-parse" }
coralreef-core = { path = "crates/coralreef-core" }
primal-rpc-client = { path = "crates/primal-rpc-client" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
