[workspace]
resolver = "2"
members = [
    "crates/coralreef-core",
    "crates/coral-reef",
    "crates/coral-reef-isa",
    "crates/coral-reef-stubs",
    "crates/coral-reef-bitview",
    "crates/nak-ir-proc",
    "crates/primal-rpc-client",
    "tools/amd-isa-gen",
    "crates/coral-driver",
    "crates/coral-gpu",
    "crates/coral-glowplug",
    "crates/coral-ember",
]
exclude = [
    "fuzz",
    "showcase",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
repository = "https://github.com/ecoPrimals/coralReef"
authors = ["ecoPrimals Project"]
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
# EVOLUTION(pure-rust-tokio): tokio → mio → libc (epoll), socket2 → libc,
# signal-hook-registry → libc. mio#1735 (rustix migration) was DECLINED by
# maintainers — transitive libc through tokio/mio is permanent in the tokio
# ecosystem. Both coexist: tokio uses mio (libc), while coral-driver,
# coral-ember, and coral-glowplug use rustix directly (linux_raw, zero libc).
# The residual libc is purely transitive through third-party async I/O.
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time"] }

# CLI (uniBin)
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# OS / filesystem helpers
rustix = "1.1.4"
tempfile = "3"
toml = "0.8"

# Zero-copy IPC payloads
bytes = { version = "1", features = ["serde"] }

# IPC — newline-delimited JSON-RPC 2.0 (pure serde_json) + tarpc
# JSON-RPC: manual dispatch via serde_json — no jsonrpsee, no async-trait, no hyper.
# Matches ecosystem standard (songBird TowerAtomic, bearDog HandlerRegistry).
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "tcp"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compiler internals
bitview = { path = "crates/coral-reef-bitview" }
nak_ir_proc = { path = "crates/nak-ir-proc" }

# Testing
proptest = "1"

# Internal crates
coral-reef = { path = "crates/coral-reef" }
coral-reef-isa = { path = "crates/coral-reef-isa" }
coral-reef-stubs = { path = "crates/coral-reef-stubs" }

[workspace.lints.rust]
missing_docs = "warn"
# coral-driver opts out (no [lints] workspace = true) and manages unsafe
# locally — it requires unsafe for kernel ioctl/mmap/MMIO with SAFETY docs.
# All other crates inherit this deny and use #![forbid(unsafe_code)].
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
