[package]
name = "coral-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sovereign GPU driver — DRM ioctl dispatch for AMD (amdgpu) and NVIDIA (nouveau)"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
rustix = { version = "1.1.4", features = ["mm", "time", "process", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["nouveau", "nvidia-drm"]
nouveau = []
nvidia-drm = []
vfio = []
test-utils = []
rdna2-buffer-read = []

[dev-dependencies]
coral-reef.workspace = true
serde_json = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
