[package]
name = "coral-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sovereign GPU driver — DRM ioctl dispatch for AMD (amdgpu) and NVIDIA (nouveau)"

[dependencies]
bytemuck = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true, features = ["time", "process", "net", "event"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cudarc = { workspace = true, optional = true }

[features]
default = ["nouveau", "nvidia-drm"]
nouveau = []
nvidia-drm = []
vfio = []
cuda = ["dep:cudarc"]
test-utils = []
rdna2-buffer-read = []

[dev-dependencies]
coral-parse = { workspace = true }
coral-reef = { workspace = true }
nvml-wrapper = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
