[package]
name = "coral-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sovereign GPU driver — DRM ioctl dispatch for AMD (amdgpu) and NVIDIA (nouveau)"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
rustix = { workspace = true, features = ["mm", "time", "process", "net", "event"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
cudarc = { version = "0.19.3", features = ["driver", "cuda-12060"], optional = true }

[features]
default = ["nouveau", "nvidia-drm"]
nouveau = []
nvidia-drm = []
vfio = []
cuda = ["dep:cudarc"]
test-utils = []
rdna2-buffer-read = []

[dev-dependencies]
coral-reef.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "exp123k_k80_sovereign"
path = "tests/exp123k_k80_sovereign/mod.rs"
