[package]
name = "coral-ember"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Immortal VFIO fd holder for safe daemon restarts — keeps GPU bindings alive across coral-glowplug restarts"

[[bin]]
name = "coral-ember"
path = "src/main.rs"

[dependencies]
coral-driver = { path = "../coral-driver", features = ["vfio"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
