[package]
name = "coral-ember"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Immortal VFIO fd holder for safe daemon restarts — keeps GPU bindings alive across coral-glowplug restarts"

[lib]
name = "coral_ember"
path = "src/lib.rs"

[[bin]]
name = "coral-ember"
path = "src/main.rs"

[dependencies]
clap.workspace = true
coral-driver = { path = "../coral-driver", features = ["vfio"] }
rustix = { version = "1.1.4", features = ["net", "event", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
