[package]
name = "coral-ember"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Immortal VFIO fd holder for safe daemon restarts — keeps GPU bindings alive across coral-glowplug restarts"

[lib]
name = "coral_ember"
path = "src/lib.rs"

[[bin]]
name = "coral-ember"
path = "src/main.rs"

[dependencies]
clap.workspace = true
coral-driver = { path = "../coral-driver", features = ["vfio"] }
libc.workspace = true
rustix = { workspace = true, features = ["net", "event", "time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
