[package]
name = "coral-glowplug"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sovereign PCIe device lifecycle broker — persistent GPU management daemon"

[lib]
name = "coral_glowplug"
path = "src/lib.rs"

[[bin]]
name = "coral-glowplug"
path = "src/main.rs"

[[bin]]
name = "coralctl"
path = "src/bin/coralctl/main.rs"

[features]
default = []
no-ember = []

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
coral-driver = { workspace = true, features = ["vfio", "cuda"] }
# Intra-primal workspace crate (coralReef), not a separate primal — wateringHole's
# "no cross-primal imports" rule applies to distinct primals coordinating via IPC.
#
# glowplug does not call ember's runtime (no `handle_swap_device`, server loop, etc.).
# It uses coral-ember only for: (1) serde-stable JSON-RPC payload types (`observation`,
# `journal`, ring metadata re-exports) shared with the ember process; (2) `ember_socket_path`
# so both binaries agree on `$CORALREEF_EMBER_SOCKET` / default Unix path. Coordination
# remains JSON-RPC over the socket; this dependency is the shared wire contract.
coral-ember = { workspace = true }
nvml-wrapper = { workspace = true }
rustix = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
coral-driver = { workspace = true, features = ["vfio"] }
tempfile = { workspace = true }
