[package]
name = "coral-glowplug"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Sovereign PCIe device lifecycle broker — persistent GPU management daemon"

[lib]
name = "coral_glowplug"
path = "src/lib.rs"

[[bin]]
name = "coral-glowplug"
path = "src/main.rs"

[[bin]]
name = "coralctl"
path = "src/bin/coralctl/main.rs"

[features]
default = []
cuda = ["coral-driver/cuda"]
no-ember = []

[dependencies]
base64 = "0.22"
clap.workspace = true
coral-driver = { path = "../coral-driver", features = ["vfio"] }
coral-ember = { path = "../coral-ember" }
rustix = { workspace = true, features = ["net"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal", "time"] }

[dev-dependencies]
coral-driver = { path = "../coral-driver", features = ["vfio"] }
tempfile.workspace = true
