[package]
name = "coral-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Unified GPU compute abstraction — compile + dispatch in one API"

[dependencies]
bytes.workspace = true
coral-reef = { path = "../coral-reef" }
coral-driver = { path = "../coral-driver" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["nouveau", "nvidia-drm"]
nouveau = ["coral-driver/nouveau"]
nvidia-drm = ["coral-driver/nvidia-drm"]
vfio = ["coral-driver/vfio"]
cuda = ["coral-driver/cuda"]

[dev-dependencies]
coral-driver = { path = "../coral-driver", features = ["test-utils"] }
naga = { version = "28", features = ["wgsl-in", "spv-out"] }
serde_json.workspace = true
