[package]
name = "coral-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Unified GPU compute abstraction — compile + dispatch in one API"

[dependencies]
bytes = { workspace = true }
coral-reef = { workspace = true }
coral-driver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = ["nouveau", "nvidia-drm"]
nouveau = ["coral-driver/nouveau"]
nvidia-drm = ["coral-driver/nvidia-drm"]
vfio = ["coral-driver/vfio"]
cuda = ["coral-driver/cuda"]

[dev-dependencies]
coral-driver = { workspace = true, features = ["test-utils"] }
naga = { workspace = true, features = ["spv-out"] }
serde_json = { workspace = true }
