[package]
name = "bitview"
description = "Bit-level field access for GPU instruction encoding — replaces Mesa bitview"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
