[package]
name = "coral-nak-isa"
description = "NVIDIA GPU ISA tables and instruction encoding for coralNak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
