[package]
name = "coral-nak-stubs"
description = "Mesa dependency stubs for coralNak — replaces compiler::*, nak_bindings, nvidia_headers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
