[package]
name = "coral-reef-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CPU compilation backend and shader validation for coralReef"

[dependencies]
naga = { version = "28", features = ["wgsl-in"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
