[package]
name = "coral-reef-isa"
description = "NVIDIA GPU ISA tables and instruction encoding for coralReef"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
