[package]
name = "coral-reef-stubs"
description = "Mesa dependency stubs for coralReef — replaces compiler::*, nak_bindings, nvidia_headers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
