[package]
name = "coral-reef"
description = "Sovereign Rust NVIDIA shader compiler — forked from Mesa NAK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
coral-reef-isa = { workspace = true }
coral-reef-stubs = { workspace = true }
bitview = { workspace = true }
nak_ir_proc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
naga = { version = "28", features = ["wgsl-in", "spv-in", "spv-out"] }

[dev-dependencies]
proptest = { workspace = true }
