[package]
name = "coral-reef"
description = "Sovereign Rust NVIDIA shader compiler — forked from Mesa NAK"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
naga = ["dep:naga"]

[dependencies]
coral-reef-isa = { workspace = true }
coral-reef-stubs = { workspace = true }
bitview = { workspace = true }
nak_ir_proc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
naga = { workspace = true, features = ["spv-in", "spv-out", "glsl-in"], optional = true }

[[bench]]
name = "compile_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
naga = { workspace = true, features = ["spv-out"] }
