[package]
name = "coralnak-core"
description = "Core primal library for coralNak — sovereign Rust NVIDIA shader compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "coralnak"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sourdough-core = { workspace = true }
coral-nak = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
