[package]
name = "coralreef-core"
description = "Core primal library for coralReef — sovereign Rust NVIDIA shader compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "coralreef"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
coral-reef = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
naga = { version = "28", features = ["wgsl-in", "spv-out"] }
proptest = { workspace = true }
tokio = { workspace = true }
# JSON-RPC HTTP client — tests only. This activates the "client" feature which
# pulls in rustls/ring for TLS. Not present in the production binary.
# In deployment, external TLS is provided by Tower Atomic (Songbird + BearDog).
jsonrpsee = { version = "0.24", features = ["client"] }
