[package]
name = "coralreef-core"
description = "Core primal library for coralReef — sovereign Rust NVIDIA shader compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "coralreef"
path = "src/main.rs"

[[bin]]
name = "or_exit_err"
path = "tests/bin/or_exit_err.rs"
required-features = []

[lints]
workspace = true

[dependencies]
coral-reef = { workspace = true }
coral-driver = { path = "../coral-driver" }
tokio = { workspace = true, features = ["process", "fs"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }

[features]
default = []
e2e = []

[dev-dependencies]
naga = { version = "28", features = ["wgsl-in", "spv-out"] }
proptest = { workspace = true }
primal-rpc-client = { path = "../primal-rpc-client" }
tempfile = "3"
jsonrpsee-http-client = { version = "0.26", default-features = false }
jsonrpsee-core = { version = "0.26", default-features = false, features = ["client", "http-helpers"] }
