[package]
name = "coralreef-core"
description = "Core primal library for coralReef — sovereign Rust NVIDIA shader compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "coralreef"
path = "src/main.rs"

[[bin]]
name = "or_exit_err"
path = "tests/bin/or_exit_err.rs"
required-features = []

[[bin]]
name = "or_exit_option_err"
path = "tests/bin/or_exit_option_err.rs"
required-features = []

[[bin]]
name = "or_exit_code_err"
path = "tests/bin/or_exit_code_err.rs"
required-features = []

[lints]
workspace = true

[dependencies]
coral-reef = { workspace = true }
coral-reef-cpu = { workspace = true }
coral-reef-jit = { workspace = true }
coral-driver = { workspace = true }
naga = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "net", "io-util", "time"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }

[features]
default = []
e2e = []

[[test]]
name = "unix_jsonrpc_default_socket_path_env"
required-features = ["e2e"]

[dev-dependencies]
naga = { workspace = true, features = ["spv-out"] }
primal-rpc-client = { workspace = true }
tempfile = { workspace = true }
jsonrpsee-http-client = { workspace = true }
jsonrpsee-core = { workspace = true }
