[package]
name = "nak_ir_proc"
description = "Proc-macro derives for NAK IR types — SrcsAsSlice, DstsAsSlice, DisplayOp, FromVariants, Encode"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
bitview = { workspace = true }
coral-reef-stubs = { workspace = true }
trybuild = { workspace = true }
