[package]
name = "amd-isa-gen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Generates Rust encoding tables from AMD ISA XML specifications"
license = "AGPL-3.0-only"

[[bin]]
name = "amd-isa-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
