[package]
name = "showcase-hardware-discovery"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
coral-driver = { path = "../../../crates/coral-driver" }
coral-gpu = { path = "../../../crates/coral-gpu" }
coralreef-core = { path = "../../../crates/coralreef-core" }
