[package]
name = "showcase-full-compute-triangle"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
coral-reef = { path = "../../../crates/coral-reef" }
coral-gpu = { path = "../../../crates/coral-gpu" }
coralreef-core = { path = "../../../crates/coralreef-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
